# ferrumdb

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/aof/: entry.rs  mod.rs  reader.rs  replay.rs  writer.rs
src/cluster/: mod.rs  router.rs  shard.rs
src/commands/: admin.rs  context.rs  counter.rs  hash.rs  key.rs  list.rs  mod.rs  registry.rs  search.rs  set.rs  string.rs  ttl.rs
src/dispatch/: mod.rs
src/protocol/: mod.rs  resp.rs  types.rs
src/server/: connection.rs  mod.rs
src/store/: entry.rs  memory.rs  mod.rs  value.rs
src/web/: handlers.rs  mod.rs  server.rs
src/web/static/: index.html
